--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,10 @@
+RewriteEngine on
+RewriteCond %{SERVER_PORT} 80
+RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
+
+ErrorDocument 404 /erreur_404.html
 #<FilesMatch ".*\.php$">
 #    Order Allow,Deny
 #    Deny from all
-#</FilesMatch
+#</FilesMatch>
